maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:30: error: type mismatch;
 found   : plm.universe.Direction
 required: String
    g=Direction.NORD
                ^Escaper:33: error: type mismatch;
 found   : plm.universe.Direction
 required: String
    g=Direction.EST
                ^